# Artificial_Intelligence_laboratory_work_5

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: Common_1.py  Common_2.py  Ind_1.py
